sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:13: error: not found: value getValeurs
        setValeur(i-j,getValeurs(i-j-1))
                      ^