sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var memoire = 0
  for (i <- 1 to getNombreValeurs()-1){
    memoire=getValeur(i)
    
    var n=1
    while (i-n > 0 && getValeur(i-n)>memoire){
      n=n+1
    }
    if (getValeur(i-n)>memoire){
      for (j <- 0 to n){
        setValeur(i-j,getValeurs(i-j-1))
      }
    }
  }
}